--- a/examples/index.html
+++ b/examples/index.html
@@ -6,11 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Plator.js example</title>
+  <link rel="stylesheet" href="../dist/plator.css">
 </head>
 
 <body>
   <video poster="" src="http://nettuts.s3.amazonaws.com/763_sammyJSIntro/trailer_test.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <script src="../dist/plator.js"></script>
+  <script>
+    let plator = new Plator()
+    plator.setup()
+  </script>
 </body>
 
 </html>
