--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <video poster="" src="http://nettuts.s3.amazonaws.com/763_sammyJSIntro/trailer_test.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
+  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://media.w3.org/2010/05/bunny/movie.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <script src="../dist/plator.js"></script>
   <script>
     let plator = new Plator()
