--- a/examples/index.html
+++ b/examples/index.html
@@ -13,7 +13,7 @@
   <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://media.w3.org/2010/05/bunny/movie.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <script src="../dist/plator.js"></script>
   <script>
-    let plator = new Plator()
+    let plator = Plator()
     plator.setup()
   </script>
 </body>
