feat: refactor media event

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Plator.js example</title>
   <link rel="stylesheet" href="../dist/plator.css">
@@ -13,7 +13,7 @@
   <h2>Video</h2>
   <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="https://oxqy5q6y4.bkt.clouddn.com/o_1bskqd5r4109o1c441jm410p2i8bc.mov" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <h2>Video with quality switcher</h2>
-  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://media.w3.org/2010/05/bunny/movie.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
+  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://media.w3.org/2010/05/bunny/trailer.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
     <source label='320' src="http://media.w3.org/2010/05/bunny/trailer.mp4" type='video/mp4'>
     <source label="460" src="http://media.w3.org/2010/05/bunny/movie.mp4" type='video/mp4'>
     <source label='720' src="https://media.w3.org/2010/05/sintel/trailer.mp4" type='video/mp4'>
