--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 
 <body>
   <h2>Video</h2>
-  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="https://oxqy5q6y4.bkt.clouddn.com/o_1bskqd5r4109o1c441jm410p2i8bc.mov" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
+  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://oxqy5q6y4.bkt.clouddn.com/o_1bskqd5r4109o1c441jm410p2i8bc.mov" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <h2>Video with quality switcher</h2>
-  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://media.w3.org/2010/05/bunny/trailer.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
-    <source label='320' src="http://media.w3.org/2010/05/bunny/trailer.mp4" type='video/mp4'>
-    <source label="460" src="http://media.w3.org/2010/05/bunny/movie.mp4" type='video/mp4'>
-    <source label='720' src="https://media.w3.org/2010/05/sintel/trailer.mp4" type='video/mp4'>
-    <source label='1080' src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
+  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
+    <source label='标清' src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
+    <source label="高清" src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
+    <source label='超清' src="http://media.w3.org/2010/05/bunny/movie.mp4" type='video/mp4'>
   </video>
   <h2>Audio</h2>
-  <audio src="https://mdn.github.io/learning-area/html/multimedia-and-embedding/video-and-audio-content/viper.mp3"></audio>
+  <audio src="https://mdn.github.io/learning-area/html/multimedia-and-embedding/video-and-audio-content/viper.mp3" preload="none"></audio>
   <script src="../dist/plator.js"></script>
   <script>
     let plator = Plator({
