feat: add fullscreen type option

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
   <h2>Video</h2>
-  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://oxqy5q6y4.bkt.clouddn.com/o_1bskqd5r4109o1c441jm410p2i8bc.mov" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
+  <video poster="http://qvideo.ffan.com/o_1bto358notpjgph8ue1878ljc9.mov?vframe/jpg/offset/5" src="http://qvideo.ffan.com/o_1bto358notpjgph8ue1878ljc9.mov" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <h2>Video with quality switcher</h2>
-  <video poster="http://media.w3.org/2010/05/bunny/poster.png" src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
+  <video poster="http://qvideo.ffan.com/o_1bto386db5nauscc12if1f2h1b.mp4?vframe/jpg/offset/5" src="http://qvideo.ffan.com/o_1bto386db5nauscc12if1f2h1b.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
     <source label='标清' src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
-    <source label="高清" src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
-    <source label='超清' src="http://media.w3.org/2010/05/bunny/movie.mp4" type='video/mp4'>
+    <source label="高清" src="http://qvideo.ffan.com/o_1bto386db5nauscc12if1f2h1b.mp4" type='video/mp4'>
+    <source label='超清' src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
   </video>
   <h2>Audio</h2>
   <audio src="https://mdn.github.io/learning-area/html/multimedia-and-embedding/video-and-audio-content/viper.mp3" preload="none"></audio>
