fix: iOS fullscreen scroll bug

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       console.log('fullscreen on')
     }).on('fullscreen_cancel', function () {
       console.log('fullscreen_cancel on')
+    }).on('ended', function () {
+      console.log('video ended')
     })
   </script>
 </body>
