--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
 
 <body>
   <h2>Video</h2>
-  <video poster="http://qvideo.ffan.com/o_1bto358notpjgph8ue1878ljc9.mov?vframe/jpg/offset/5" src="http://qvideo.ffan.com/o_1bto358notpjgph8ue1878ljc9.mov" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
+  <video poster="http://devtest.qiniudn.com/若能绽放光芒.png" src="http://devtest.qiniudn.com/若能绽放光芒.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true"></video>
   <h2>Video with quality switcher</h2>
-  <video poster="http://qvideo.ffan.com/o_1bto386db5nauscc12if1f2h1b.mp4?vframe/jpg/offset/5" src="http://qvideo.ffan.com/o_1bto386db5nauscc12if1f2h1b.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
-    <source label='标清' src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
-    <source label="高清" src="http://qvideo.ffan.com/o_1bto386db5nauscc12if1f2h1b.mp4" type='video/mp4'>
-    <source label='超清' src="http://qvideo.ffan.com/Fs3BK-NVGTnPF06i-XWP0PiTN4_e_480.m3u8" type='application/x-mpegURL'>
+  <video poster="http://devtest.qiniudn.com/若能绽放光芒.png" src="http://devtest.qiniudn.com/若能绽放光芒.mp4" preload="none" width="100%" height="100%" controls="controls" playsinline="true" webkit-playsinline="true">
+    <source label="标清" src="http://devtest.qiniudn.com/若能绽放光芒.mp4" type='video/mp4'>
+    <source label="高清" src="http://devtest.qiniudn.com/若能绽放光芒.m3u8" type='application/x-mpegURL'>
+    <source label="超清" src="http://devtest.qiniudn.com/若能绽放光芒.m3u8" type='application/x-mpegURL'>
   </video>
   <h2>Audio</h2>
-  <audio src="https://mdn.github.io/learning-area/html/multimedia-and-embedding/video-and-audio-content/viper.mp3" preload="none"></audio>
+  <audio src="http://devtest.qiniudn.com/secret base~.mp3" preload="none"></audio>
   <script src="../dist/plator.js"></script>
   <script>
     let plator = Plator({
       type: 'video, audio'
     })
-    plator.setup({
-        recommend: (player) => {
+    plator.setup([
+        (player) => {
           console.log('plugin')
           player.events.on('ended', (e) => {
             console.log('ended plugin')
             // video ended togglePlay
-            e.player.uiMap.buttonBig.innerHTML = '2222'
+            // e.player.uiMap.buttonBig.innerHTML = '2222'
           })
         }
-      }).on('fullscreen', function () {
+      ]).on('fullscreen', function () {
       console.log('fullscreen on')
     }).on('fullscreen_cancel', function () {
       console.log('fullscreen_cancel on')
     }).on('ended', function (e) {
       console.log('video ended', e)
-      e.player.uiMap.buttonBig.innerHTML = `<span>111111</span>`
+      // e.player.uiMap.buttonBig.innerHTML = `<span>111111</span>`
     })
   </script>
 </body>
