fix: player style

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         console.log('fullscreen_cancel on')
       }).on('ended', function (e) {
         console.log('video ended', e)
-        // e.player.uiMap.buttonBig.innerHTML = `<span>111111</span>`
+        e.player.uiMap.buttonBig.innerHTML = `<span>111111</span>`
       })
     }
     init()
